[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-fraud-agent"
version = "1.0.0"
description = "E-commerce Return Fraud Environment for OpenEnv"
authors = [
    {name = "Dwayne Fernandes"}
]
dependencies = [
    "openai>=1.14.0",
    "pydantic>=2.6.3",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"